Fix styling and alignment on experience page

--- a/compass/sass/styles.scss
+++ b/compass/sass/styles.scss
@@ -68,6 +68,9 @@ ul.topnav li.icon {
 		float: right;
 		.topnav{
 			float: right;
+			#hamburger{
+				font-size: 30px;
+			}
 		}
 		li{
 			list-style: none;
@@ -136,7 +139,7 @@ ul.topnav li.icon {
 		.home-bg {
 			background-color: rgba(128, 204, 149, 0.7);
 			padding: 30px 0;
-			margin-top: 125px;
+			// margin-top: 125px;
 			-webkit-animation-name: bganimation; /* Safari 4.0 - 8.0 */
 			-webkit-animation-duration: 5s; /* Safari 4.0 - 8.0 */
 			animation-name: bganimation;
@@ -230,14 +233,22 @@ ul.topnav li.icon {
 		font-size: 16px;
 		cursor: pointer;
 		text-decoration: underline;	
+		padding-left: 24px;
 		&:hover, &:active{
 				color: $seafoam;
 		}
-		
+	}
+	.Collapsible__contentOuter{
+		padding-left: 24px;
+		padding-top: 5px;
 	}
 	.skills-header{
 		font-weight: 700;
 		font-family: $serif;
+
+	}
+	.learn-more{
+		margin-left: 10px;
 	}
 	.skills-bg {
 		background-color: $platinum;
@@ -249,7 +260,7 @@ ul.topnav li.icon {
 	}
 
 	.lang-sym {
-		min-width: 45px;
+		min-width: 60px;
 		font-size: 11px;
 		text-align: center;
 		margin-bottom: 10px;
@@ -293,6 +304,9 @@ ul.topnav li.icon {
 		font-size: 30px;
 		min-width: 308px;
 	}
+	.home-bg {
+		margin-top: 125px;
+	}
 
 }
 @media screen and (max-width:768px) {
@@ -304,7 +318,7 @@ ul.topnav li.icon {
 		min-width: 170px;
 	}
 	.home-bg {
-		margin-top: 50px;
+		margin-top: 10px;
 	}
 	ul.topnav {
 		background-color: white;
